--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <a href="https://github.com/ninepolar/nadoc" target="_blank" class="github-corner" aria-label="View source on Github">
     <svg width="80" height="80" viewBox="0 0 250 250"
-      style="fill:#202020; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
+      style="fill:#f27034; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
       <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
       <path
         d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
@@ -28,9 +28,9 @@
         fill="currentColor" class="octo-body"></path>
     </svg>
   </a>
-  <nav class="navbar fixed-top blur shadow navbar-expand-lg navbar-light bg-light mt-3">
+  <nav class="navbar position-fixed blur navbar-light bg-light mt-3 ms-1">
 
-    <div class="container-fluid px-0">
+    <div class="container-fluid">
 
       <a class="navbar-brand ms-3" href="./index.html" rel="tooltip" title="九方设计" data-placement="bottom">
         <svg width="54" height="36" xmlns="http://www.w3.org/2000/svg">
@@ -62,7 +62,6 @@
             </g>
           </g>
         </svg></a>
-      <a href="javascript:;" class="btn btn-sm btn-radius btn-round mb-0 ms-auto d-lg-none d-block buy-now">现在定制</a>
 
       <button class="navbar-toggler shadow-none ms-md-2" type="button" data-bs-toggle="collapse" data-bs-target="#npnav"
         aria-controls="npnav" aria-expanded="false" aria-label="Toggle navigation">
@@ -75,17 +74,11 @@
 
       <div class="collapse navbar-collapse" id="npnav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-3" id="nmenu">
-
-        </ul>
-        <ul class="navbar-nav d-lg-block d-none">
-          <li class="nav-item">
-            <a href="javascript:;" class="btn btn-sm btn-radius buy-now mb-0 me-3">现在定制</a>
-          </li>
         </ul>
       </div>
-
     </div>
   </nav>
+
   <!-- End Navbar -->
   <div class="page-header min-vh-75 relative banner">
     <span class="mask bg-gradient-primary"></span>
@@ -108,7 +101,15 @@
   </div>
 
   <div id="htmlcapture">
-
+    <!--  -->
+    <section id="ztreebox" class="p-3 wow fadeInUp position-absolute mt-0">
+      <div class="">
+        <button class="btn btn-outline-warning btn-sm expandAll">展开列表</button>
+        <input type="checkbox" class="btn-check" id="onscroll" autocomplete="off">
+        <label class="btn btn-outline-secondary btn-sm" for="onscroll" id="ztreescroll">停靠</label>
+      </div>
+      <ul id="ztree" class="ztree flex-column" role="ztree"></ul>
+    </section>
     <!-- 说明 -->
     <section class="ms-3 me-3 pt-1 pb-4 mb-5 z-index-sticky  wow fadeInUp" id="count-stats">
       <div class="container">
@@ -126,7 +127,7 @@
         </div>
       </div>
     </section>
-    <!--  -->
+
 
     <!-- 模版列表 -->
     <section class="m-3 p-3 wow fadeInUp">
@@ -138,11 +139,7 @@
         <div class="row">
           <div class="col-lg-9 border-radius-xl mx-auto py-3 blur shadow-blur">
             <div class="row">
-              <div class="col-md-3">
-                <button class="btn btn-outline-warning btn-sm expandAll">展开列表</button>
-                <ul id="ztree" class="ztree flex-column" role="ztree"></ul>
-              </div>
-              <div class="col-md-9" id="content"></div>
+              <div class="col-md-12" id="content"></div>
             </div>
           </div>
         </div>
@@ -161,7 +158,7 @@
   </div>
 
   <script>
-    var n, tpl, treeexp = true, ztopt, setting = {
+    var n, tpl, treeexp = true, ztopt, sm = true, setting = {
       callback: {
         onClick: zTreeOnClick
       }
@@ -170,7 +167,7 @@
     function menu(params) {
       if (typeof params != "") {
         params.forEach(me => {
-          var mtpl = `<li class="nav-item"><a href="javascript:;" class="nav-link" onclick="init(this,'${me.json}')">${me.name}</a></li>`;
+          var mtpl = `<li class="nav-item"><a href="javascript:;" class="nav-link" onclick="init(this,'${me.json}');$('.navbar-toggler').trigger('click'),focus();">${me.name}</a></li>`;
           $("#nmenu").append(mtpl);
         })
       }
@@ -192,10 +189,6 @@
       var mdf = treeNode.show;
       $.get(mdf, function (res, status) {
         fc = (status == "success") ? marked.parse(res) : "未知内容";
-        // if (fc.match(/^sequenceDiagram/) || fc.match(/^graph/)) {
-        //   console.log("code", code)
-        //   fc = '<div class="mermaid">' + code + '</div>';
-        // }
         $("#content").html(fc);
         $(".area-title").html(treeNode.name)
         n.codelight();
@@ -244,7 +237,24 @@
       }
 
     })
+    //主菜单停靠
+    $("#onscroll").on('click', function () {
+      var v;
+      var v = sm == true ? "浮动" : "停靠"
+      var a = "position-fixed"
+      var b = "position-absolute"
+      if (sm) {
+        $('#ztreebox').removeClass(b).addClass(a);
+        $("#ztreescroll").html(v);
+        sm = false
+      } else {
+        $('#ztreebox').removeClass(a).addClass(b);
+        $("#ztreescroll").html(v);
+        sm = true
+      }
+    });
 
+    //请求配置文件
     $.get("/assets/json/opts.json", function (opt) {
       n = $(this).nui(opt.opts)
       ztopt = Object.assign(opt.ztree, setting)
